--- a/src/main/resources/templates/dash_v4.html
+++ b/src/main/resources/templates/dash_v4.html
@@ -96,7 +96,7 @@ label {
 }
 </style>
 
-<title>Signature Capture</title>
+<title>Home</title>
 </head>
 
 <body class="sb-nav-fixed">
@@ -263,8 +263,10 @@ label {
 							<div id="cropmodal" class="modal fade" tabindex="-1"
 								role="dialog" aria-hidden="true">
 								<div class="modal-dialog">
-									<div class="modal-content">
+								<div class="modal-content">
+									<div class="col-md-12">
 										<h3 style="text-align: center;">Preview signature</h3>
+										
 										<div>
 											<div>
 												<div class="text-center">
@@ -272,19 +274,21 @@ label {
 												</div>
 											</div>
 										</div>
+										
 										<br>
-
 										<button class="btn btn-sm btn-primary"
 											style="text-align: center;" data-dismiss="modal"
-											aria-hidden="true">Close</button>
+											>Close</button>
 										<br>
-
+										<br>
+										</div>
+									</div>
 									</div>
 								</div>
 							</div>
 							<!-- -------------------------------------------------------------- -->
 
-							<!-- <button type="submit" class="btn btn-primary">Submit</button> -->
+							
 						</div>
 					</div>
 				</div>
@@ -301,6 +305,7 @@ label {
 		src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<script src="js/scripts.js"></script>		
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
 		crossorigin="anonymous"></script>
