--- a/src/main/resources/templates/dashboardViewSignature.html
+++ b/src/main/resources/templates/dashboardViewSignature.html
@@ -69,7 +69,7 @@ label {
 }
 </style>
 
-<title>Signature Capture</title>
+<title>Edit Signature</title>
 </head>
 
 <body class="sb-nav-fixed">
@@ -99,7 +99,7 @@ label {
 								<i class="fas fa-user"></i>
 							</div> <span class="sidebar" style="color: white; padding-left: 5px;">View/Edit
 								Profile</span>
-						</a> <a class="nav-link" href="#">
+						</a> <a class="nav-link" href="/changepwd">
 							<div class="sb-nav-link-icon" style="color: white">
 								<i class="glyphicon glyphicon-lock"></i>
 							</div> <span class="sidebar" style="color: white; padding-left: 4px;">Change
@@ -200,13 +200,9 @@ label {
 		src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 	<script
 		src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
+	<script src="js/scripts.js"></script>	
 	<script type="text/javascript" src="/js/cropper.js"></script>
 	<script>
-	$(document).ready(function() {
-	    $('#signatureFile').click(function() {
-	        $('#imgActionBtns').show();
-	    });
-	});	
 		
 	$(document).ready(function() {
 			  $('input[type=radio][name="signOption"]').on('change', function() {
