--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -44,7 +44,7 @@ h1 {
 }
 </style>
 </head>
-<body class="hold-transition register-page">
+<body id="registerbody" class="hold-transition register-page">
 	<header  id="registerheader">
 		<center>
 			<img style="width: 25%;" src="/img/calpers_logo.png">
@@ -61,115 +61,52 @@ h1 {
 			<form th:action="@{/registration}" th:object="${user}" method="post">
 
 				<div class="has-feedback">			
-			      <input type="text" class="form-control" id="validationCustom01" placeholder="First name"
-			        required><span class="glyphicon glyphicon-user form-control-feedback" th:field="*{firstName}"></span>
+			      <input type="text" class="form-control" id="firstName" placeholder="First name" th:field="*{firstName}"
+			        required><span class="glyphicon glyphicon-user form-control-feedback" ></span>
 			    </div>   <br>
 			    
 			    <div class="has-feedback">		    
-			      <input type="text" class="form-control" id="validationCustom02" placeholder="Last name"
-			        required><span class="glyphicon glyphicon-user form-control-feedback" th:field="*{lastName}"></span>
+			      <input type="text" class="form-control" id="lastName" placeholder="Last name" th:field="*{lastName}"
+			        required><span class="glyphicon glyphicon-user form-control-feedback" ></span>
 			    </div>     <br>
 			        
 			    
 				<div class="has-feedback">			    
-  				<input id="phonenum" class="form-control" type="tel" pattern="^\d{3}\d{3}\d{4}$" placeholder="Contact number (xxx-xxx-xxxx)" required >    
-				<span class="glyphicon glyphicon-earphone form-control-feedback" th:field="*{contactNo}"></span>
+  				<input id="contactNo" class="form-control" type="tel" pattern="^\d{3}\d{3}\d{4}$" placeholder="Contact number (xxx-xxx-xxxx)" th:field="*{contactNo}" required >    
+				<span class="glyphicon glyphicon-earphone form-control-feedback"></span>
 				</div>	<br>
 
 
 				<div class="has-feedback" >				
-					<input type="email" class="form-control" placeholder="Email" th:field="*{email}"> 
+					<input type="email" id="email" class="form-control" placeholder="Email" th:field="*{email}" onchange="setOrg()"> 
 					<span class="glyphicon glyphicon-envelope form-control-feedback"></span>
 					
 				</div> <br>
 				
+				<div class="has-feedback">
+			      <input type="text" class="form-control" id="organization" th:field="*{organization}" placeholder="Organization"
+			        required><span class="fa fa-building form-control-feedback"></span>
+			    </div>  <br>
+				
 				<div class="has-feedback">			    
-  				<input type="password" id="inputValidationEx1" class="form-control validate" placeholder="Password" pattern="[A-Za-z]{8}" title="Eight letter Password">
-  				<span class="glyphicon glyphicon-lock form-control-feedback" th:field="*{password}" ></span>
+  				<input type="password" id="password" th:field="*{password}" class="form-control validate" placeholder="Password" pattern="[A-Za-z]{8}" title="Eight letter Password">
+  				<span class="glyphicon glyphicon-lock form-control-feedback" ></span>
 				<div class="requirements"> Must be a valid password!</div>
 		
 				</div> <br>
-				
-		
-		
+					
 				
 				<div class="has-feedback">			    
-  				<input type="password" id="inputValidationEx2" class="form-control validate" placeholder="Confirm Password" pattern="[A-Za-z]{8}" title="Eight letter Password">     
-				<span class="glyphicon glyphicon-lock form-control-feedback" th:field="*{confirmPassword}"></span>
+  				<input type="password" id="confirmPassword" th:field="*{confirmPassword}" class="form-control validate" placeholder="Confirm Password" pattern="[A-Za-z]{8}" title="Eight letter Password">     
+				<span class="glyphicon glyphicon-lock form-control-feedback" ></span>
 				<div class="requirements"> Password should match!</div>
-				</div> <br>
-
+				</div> 
 				
-				
-				<div class="has-feedback">
-			      <input type="text" class="form-control" id="validationCustom03" placeholder="Organization"
-			        required><span class="fa fa-building form-control-feedback" th:field="*{organization}"></span>
-			    </div>  
-				
-				<!-- <div class="form-group has-feedback"
-					th:classappend="${#fields.hasErrors('firstName')}? 'has-error':''">
-					<input type="text" class="form-control" placeholder="First name"
-						th:field="*{firstName}"> <span
-						class="glyphicon glyphicon-user form-control-feedback"></span>
-					<p class="error-message"
-						th:each="error : ${#fields.errors('firstName')}"
-						th:text="${error}">Validation error</p>
-				</div> -->
-				<!-- <div class="form-group has-feedback"
-					th:classappend="${#fields.hasErrors('lastName')}? 'has-error':''">
-					<input type="text" class="form-control" placeholder="Last name"
-						th:field="*{lastName}"> <span
-						class="glyphicon glyphicon-user form-control-feedback"></span>
-					<p class="error-message"
-						th:each="error : ${#fields.errors('lastName')}" th:text="${error}">Validation
-						error</p>
-				</div> -->
-				<!-- <div class="form-group has-feedback"
-					th:classappend="${#fields.hasErrors('contactNo')}? 'has-error':''">
-					<input type="text" class="form-control" placeholder="Contact No"
-						th:field="*{contactNo}"> <span
-						class="glyphicon glyphicon-earphone form-control-feedback"></span>
-					<p class="error-message"
-						th:each="error : ${#fields.errors('contactNo')}"
-						th:text="${error}">Validation error</p>
-				</div> -->
-				
-				<!-- <div class="form-group has-feedback"
-					th:classappend="${#fields.hasErrors('password')}? 'has-error':''">
-					<input type="password" class="form-control" placeholder="Password"
-						th:field="*{password}"> <span
-						class="glyphicon glyphicon-lock form-control-feedback"></span>
-					<p class="error-message"
-						th:each="error : ${#fields.errors('password')}" th:text="${error}">Validation
-						error</p>
-
-				</div> -->
-
-				<!-- <div class="form-group has-feedback"
-					th:classappend="${#fields.hasErrors('confirmPassword')}? 'has-error':''">
-					<input type="password" class="form-control"
-						placeholder="Confirm password" th:field="*{confirmPassword}">
-					<span class="glyphicon glyphicon-lock form-control-feedback"></span>
-					<p class="error-message"
-						th:each="error : ${#fields.errors('confirmPassword')}"
-						th:text="${error}">Validation error</p>
-				</div> -->
-				<!-- <div class="form-group has-feedback"
-					th:classappend="${#fields.hasErrors('organization')}? 'has-error':''">
-					<input type="text" class="form-control" placeholder="Organization"
-						th:field="*{organization}"> <span
-						class="fa fa-building form-control-feedback"></span>
-					<p class="error-message"
-						th:each="error : ${#fields.errors('organization')}"
-						th:text="${error}">Validation error</p>
-
-				</div> -->
-
 				<div class="row">
 					<div class="form-group"
 						th:classappend="${#fields.hasErrors('terms')}? 'has-error':''">
 						<div class="checkbox icheck">
-							<label> <input type="checkbox"> <span style="padding-left: 5px;">I
+							<label> <input id="terms" type="checkbox" th:field="*{terms}" /><span style="padding-left: 5px;">I
 									agree to the <a data-toggle="modal"
 									data-target="#modal-default">Terms and Conditions</a>
 							</span>
@@ -182,8 +119,7 @@ h1 {
 						<button type="submit" class="btn btn-primary btn-block btn-flat">Sign
 							up</button>
 					</div>
-					<div class="form-group">
-
+					<div class="form-group" style="text-align:center; padding-top:40px;">
 						<span>Already registered? <a href="/" th:href="@{/login}">Login
 								here</a></span>
 					</div>
@@ -260,7 +196,20 @@ h1 {
 				radioClass : 'iradio_square-blue',
 				increaseArea : '25%' /* optional */
 			});
+			
 		});
+		 function setOrg() {
+			 var email =$('#email').val();
+			 if(email.includes("@calpers.com")) {
+				   $('#organization').val("CalPERS");
+				   $('#organization').attr("disabled","disabled");
+			   }
+			 else {
+				 $('#organization').val("");
+				   $('#organization').removeAttr("disabled");
+			 }
+		}
+		
 	</script>
 </body>
 </html>
