--- a/src/main/resources/templates/calperslogin.html
+++ b/src/main/resources/templates/calperslogin.html
@@ -42,14 +42,14 @@
 
 				<form th:action="@{/login}" method="post">
 					<div th:if="${param.error}">
-						<div class="alert alert-danger">Invalid email or password.</div>
+						<div class="alert alert-danger" style="text-align:center;">Invalid email or password.</div>
 					</div>
 					<div th:if="${param.success}">
-						<div class="alert alert-success">Password reset was
+						<div class="alert alert-success" style="text-align:center;">Password reset was
 							successful. Please login again with new password.</div>
 					</div>
 					<div th:if="${param.logout}">
-						<div class="alert alert-info">You have been logged out.</div>
+						<div class="alert alert-info" style="text-align:center;">You have been logged out.</div>
 					</div>
 
 					<div class="form-group">
