--- a/src/main/resources/templates/change_pwd.html
+++ b/src/main/resources/templates/change_pwd.html
@@ -116,15 +116,15 @@ label {
 					</div>
 					<div class="card-body">
 						<!-- -------------------------------------------------------------- -->
+						<div id="ajax-msg" class="alert alert-dismissible"
+							style="display: none;">
+							<input type="button" class="close btn btn-sm"
+								data-dismiss="alert" aria-hidden="true" value="x">
+							<p style="text-align:center;"></p>
+						</div>
 
 						<div class="col-md-8 col-md-offset-2">
 							<form class="form-horizontal" id="pwdForm" role="form">
-								<div id="ajax-msg" class="alert alert-dismissible"
-									style="display: none;">
-									<input type="button" class="close btn btn-sm"
-										data-dismiss="alert" aria-hidden="true" value="x">
-									<p></p>
-								</div>
 								<div class="form-group editFields">
 									<label class="col-md-4">Current Password:</label>
 									<div class="col-md-8">
@@ -135,8 +135,7 @@ label {
 								<div class="form-group editFields">
 									<label class="col-md-4">New Password:</label>
 									<div class="col-md-8">
-										<input type="password" id="newPwd"
-											placeholder="Password">
+										<input type="password" id="newPwd" placeholder="Password">
 									</div>
 								</div>
 								<div class="form-group editFields">
@@ -151,9 +150,8 @@ label {
 									<label class="col-lg-3 control-label"></label>
 									<div class="col-lg-8">
 										<input type="button" id="btnSubmit" class="btn btn-primary"
-											value="Save Changes">
-										<input
-											type="reset" class="btn btn-default" value="Cancel">
+											value="Save Changes"> <input type="reset"
+											class="btn btn-default" value="Cancel">
 									</div>
 								</div>
 							</form>
@@ -170,60 +168,76 @@ label {
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
 		crossorigin="anonymous"></script>
-	<script src="js/scripts.js"></script>		
+	<script src="js/scripts.js"></script>
 
 	<script
-		src = "http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
+		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
+		
 	</script>
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 	<script type="text/javascript">
-	  
-	        $("#btnSubmit").click(function(e) {
-	        	e.preventDefault();
-	        	var current = $("#currentPwd").val();
-	            var password = $("#newPwd").val();
-	            var confirmPassword = $("#confirmPwd").val();
-	           if (password != confirmPassword) {
-	                alert("Passwords do not match.");
-	            }
-	           else{
-	        	   //ajax call here 
-	        	   var data ={
-							currentPwd : current,
-							newPwd : password
-					};
-					$.ajax({
-						type : "POST",
-						data :JSON.stringify(data),
-						contentType : "application/json",
-					    url : "changepwd",
-						cache : false,
-						success : function(data) {
-							console.log(data);
-							if(data == "Success") {
-								console.log("success block");
-								window.location.href = "/login?success";
-								
+		$("#btnSubmit")
+				.click(
+						function(e) {
+							e.preventDefault();
+							var current = $("#currentPwd").val();
+							var password = $("#newPwd").val();
+							var confirmPassword = $("#confirmPwd").val();
+							if (password != confirmPassword) {
+								$('#ajax-msg').addClass(
+								'alert-danger');
+						$('#ajax-msg')
+								.find("p")
+								.html(
+										"Password and Confirm Password do not match.");
+						$('#ajax-msg').show();
+							} else {
+								//ajax call here 
+								var data = {
+									currentPwd : current,
+									newPwd : password
+								};
+								$
+										.ajax({
+											type : "POST",
+											data : JSON.stringify(data),
+											contentType : "application/json",
+											url : "changepwd",
+											cache : false,
+											success : function(data) {
+												console.log(data);
+												if (data == "Success") {
+													console
+															.log("success block");
+													window.location.href = "/login?success";
+
+												} else {
+													console.log("else block");
+													$('#ajax-msg').addClass(
+															'alert-danger');
+													$('#ajax-msg')
+															.find("p")
+															.html(
+																	"Current password does not match with the records for this account.");
+													$('#ajax-msg').show();
+												}
+											},
+											error : function(data) {
+												console.log(data);
+												console.log("error block");
+												$('#ajax-msg').addClass(
+														'alert-danger');
+												$('#ajax-msg')
+														.find("p")
+														.html(
+																"Current password does not match with the records for this account.");
+												$('#ajax-msg').show();
+											}
+										});
 							}
-							else{
-								console.log("else block");
-								$('#ajax-msg').addClass('alert-danger');
-								$('#ajax-msg').find("p").html("Current password does not match with the records.");
-								$('#ajax-msg').show();
-							}
-						},
-						error: function(data) {
-							console.log(data);
-							console.log("error block");
-							$('#ajax-msg').addClass('alert-danger');
-							$('#ajax-msg').find("p").html("Failed to update password changes.");
-							$('#ajax-msg').show();
-				        }
-					});
-	           }
-	            
-	        });
+
+						});
 	</script>
 </body>
 </html>
