--- a/src/main/resources/templates/dash_v4.html
+++ b/src/main/resources/templates/dash_v4.html
@@ -170,7 +170,7 @@ label {
 
 						</div>
 						<div class="card-body">
-							<!-- --------------------------------------------------------- -->
+							<!-- --------------------------------------------------------- -->		
 
 							<div class="row" style="padding-top: 16px; padding-bottom: 16px;">
 								<label class="col-md-6">Please enter preferred name with
@@ -192,12 +192,12 @@ label {
 							<!--   ------------------------------------------------------------------ -->
 							<div id="drawContainer" class="container" style="display: none;">
 								<div>
-									<div id="signpad-ajax-msg" class="alert alert-dismissible"
+									<!--<div id="signpad-ajax-msg" class="alert alert-dismissible"
 										style="display: none;">
 										<input type="button" class="close btn btn-sm"
 											data-dismiss="alert" aria-hidden="true" value="x">
 										<p></p>
-									</div>
+									</div>-->
 								</div>
 								<div id="signpad-div" class="row signpad-padding">
 									<div>
@@ -220,12 +220,12 @@ label {
 							<div id="uploadContainer" class="container"
 								style="display: none;">
 								<div>
-									<div id="upload-ajax-msg" class="alert alert-dismissible"
+									<!-- <div id="upload-ajax-msg" class="alert alert-dismissible"
 										style="display: none;">
 										<input type="button" class="close btn btn-sm"
 											data-dismiss="alert" aria-hidden="true" value="x">
 										<p></p>
-									</div>
+									</div>-->
 								</div>
 								<div class="row" style="padding-top: 22px;">
 									<div class="uploadDiv col-md-6">
@@ -265,7 +265,7 @@ label {
 								<div class="modal-dialog">
 								<div class="modal-content">
 									<div class="col-md-12">
-										<h3 style="text-align: center;">Preview signature</h3>
+										<h4 style="text-align: center;">Preview signature</h4>
 										
 										<div>
 											<div>
@@ -418,26 +418,15 @@ label {
 			    url : "saveSignature",
 				cache : false,
 				success : function(data) {
-					if(data == "Success") {
-						$('#upload-ajax-msg').addClass('alert-success');
-						$('#upload-ajax-msg').find("p").append("Successfully saved signature.");
-						$('#upload-ajax-msg').show();
-						$('#uploadSignDiv').hide();
-						window.location.href="/dashboard";
+					if(data == "Success") {						
+						window.location.href="/dashboard?success";
 					}
 					else {
-						$('#upload-ajax-msg').addClass('alert-danger');
-						$('#upload-ajax-msg').find("p").append("Error while saving signature. Please try again.");
-						$('#upload-ajax-msg').show();
+						window.location.href="/dashboard?error";
 					}
 				},
 				error: function(data) {
-					$('#upload-ajax-msg').addClass('alert-danger');
-					$('#upload-ajax-msg').find("p").append("Error while saving signature. Please try again.");
-					$('#upload-ajax-msg').show();
-		            /*$(".message").text(returnval + " failure");
-		            $(".message").fadeIn("slow");
-		            $(".message").delay(2000).fadeOut(1000);*/
+					window.location.href="/dashboard?error";
 		        }
 			
 			});
@@ -470,25 +459,14 @@ label {
 					cache : false,
 					success : function(data) {
 						if(data == "Success") {
-							$('#signpad-ajax-msg').addClass('alert-success');
-							$('#signpad-ajax-msg').find("p").append("Successfully saved signature.");
-							$('#signpad-ajax-msg').show();
-							$('#signpad-div').hide();
-							window.location.href="/dashboard";
+							window.location.href="/dashboard?success";
 						}
 						else {
-							$('#signpad-ajax-msg').addClass('alert-danger');
-							$('#signpad-ajax-msg').find("p").append("Error while saving signature. Please try again.");
-							$('#signpad-ajax-msg').show();
+							window.location.href="/dashboard?error";
 						}
 					},
 					error: function(data) {
-						$('#signpad-ajax-msg').addClass('alert-danger');
-						$('#signpad-ajax-msg').find("p").append("Error while saving signature. Please try again.");
-						$('#signpad-ajax-msg').show();
-			            /*$(".message").text(returnval + " failure");
-			            $(".message").fadeIn("slow");
-			            $(".message").delay(2000).fadeOut(1000);*/
+						window.location.href="/dashboard?error";
 			        }
 				});
 			});
