--- a/src/main/resources/templates/calperslogin.html
+++ b/src/main/resources/templates/calperslogin.html
@@ -168,7 +168,7 @@ top:-7px;
                         $('#ajax-msg')
                             .find("p")
                             .html(
-                                "Email is not registered.");
+                                "Email does not exist. Please register.");
                         $('#ajax-msg').show();
                     }
                 });
