UI Final changes

--- a/src/main/resources/templates/dash_v4.html
+++ b/src/main/resources/templates/dash_v4.html
@@ -183,7 +183,8 @@ label {
 								<div class="col-md-6">
 									<input type="radio" id="drawOpt" name="signOption" value="draw">
 									<label for="draw">Draw</label> <input type="radio"
-										id="uploadOpt" name="signOption" value="upload"><label
+										id="uploadOpt" name="signOption" value="upload">
+										<label "padding-left: 3px;"
 										for="upload">Upload</label>
 								</div>
 							</div>
