--- a/src/main/resources/templates/change_pwd.html
+++ b/src/main/resources/templates/change_pwd.html
@@ -151,7 +151,7 @@ label {
 									<div class="col-lg-8">
 										<input type="button" id="btnSubmit" class="btn btn-primary"
 											value="Save Changes"> <input type="reset"
-											class="btn btn-default" value="Cancel">
+											class="btn btn-primary" value="Cancel">
 									</div>
 								</div>
 							</form>
