--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -47,7 +47,7 @@ h1 {
 <body id="registerbody" class="hold-transition register-page">
 	<header  id="registerheader">
 		<center>
-			<img style="width: 25%;" src="/img/calpers_logo.png">
+			<img style="width: 19%; padding-top: 25px; padding-right: 20px;" src="/img/calpers_logo.png">
 		</center>
 	</header>
 	<div class="register-box">
