Added comments for removal of background. Code cleaning of Signature Controller, Change dashboard upolad message

--- a/src/main/resources/templates/dash_v4.html
+++ b/src/main/resources/templates/dash_v4.html
@@ -241,7 +241,7 @@ label {
 										<div class="row"
 											style="padding-bottom: 15px; padding-left: 14px;">
 											<a class='my-tool-tip' data-toggle="tooltip" data-placement="left" 
-											title="Choose an image with plain background and dark signature">
+											title="Choose an image with plain light background and dark signature">
                 								<i class='glyphicon glyphicon-info-sign'></i>
             								</a>
 											<!-- Below are a series of inputs which allow file selection and interaction with the cropper api -->
