Removal of unwanted fields in Entity classes
added token type to confirm token field

--- a/src/main/resources/templates/resetpwd.html
+++ b/src/main/resources/templates/resetpwd.html
@@ -134,12 +134,12 @@
 						<input type="hidden" th:value="${email}" id="email">
 						<div class="form-group">
 							<label style="float:left;" for="Password">New Password</label> <input
-								type="text" class="form-control" id="newPwd"
+								type="password" class="form-control" id="newPwd"
 								placeholder="Password">
 						</div>
 						<div class="form-group">
 							<label style="float:left;" for="Confirm Password">Confirm Password</label> <input
-								type="text" class="form-control" id="confirmPwd"
+								type="password" class="form-control" id="confirmPwd"
 								placeholder="Confirm Password">
 						</div>
 					</div>
