--- a/src/main/resources/templates/change_pwd.html
+++ b/src/main/resources/templates/change_pwd.html
@@ -128,23 +128,21 @@ label {
 								<div class="form-group editFields">
 									<label class="col-md-4">Current Password:</label>
 									<div class="col-md-8">
-										<input type="password" id="currentPwd"
-											placeholder="Current password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
+										<input type="password" class="form-control" id="currentPwd"
+											placeholder="Current password" required>
 									</div>
 								</div>
 								<div class="form-group editFields">
 									<label class="col-md-4">New Password:</label>
 									<div class="col-md-8">
-										<input type="password" id="newPwd" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
-										<div class="requirements"> Accept at least one number and one uppercase and lowercase letter, and at least 6 or more characters!</div>
-		
+										<input type="password" class="form-control" id="newPwd" placeholder="Password" required>
 									</div>
 								</div>
 								<div class="form-group editFields">
 									<label class="col-md-4">Confirm Password:</label>
 									<div class="col-md-8">
-										<input type="password" id="confirmPwd"
-											placeholder="Confirm Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
+										<input type="password" class="form-control" id="confirmPwd"
+											placeholder="Confirm Password"  required>
 									</div>
 
 								</div>
